--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   path_provider: ^2.1.5
   dio: ^5.9.0
   retrofit: ^4.7.3
+  # json_annotation: ^4.9.0
   hive_flutter: ^1.1.0
   client_information: ^2.2.0
   flutter_secure_storage: ^9.2.4
